# proteosim-

./: README.md  ms_experiment_final.ipynb  pyproject.toml  requirements.txt
.github/.workflows/: tests.yml
.github/workflows/: main.yml
Proteosim/: __init__.py  protein_digestion.py
Proteosim master file/Proteosim/: file_handling.py
Proteosim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Test/: test_file_handling.py
Tests/: test_file_handling.py  test_protein_digestion.py
data/: dummy_proteins.fasta
proteosim/: __init__.py  liquid_chromatography.py  mass_spectra_simulation.py  protein_digestion.py
tests/: test_liquid_chromatography.py  test_mass_spectra_simulation.py  test_protein_digestion.py
